--- a/AyoMakan/app/src/main/res/layout/activity_edit_profile.xml
+++ b/AyoMakan/app/src/main/res/layout/activity_edit_profile.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.ProfileFragment">
+    tools:context=".fragment.ProfileFragment"
+    android:id="@+id/main"
+    android:background="@color/white">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_centerHorizontal="true"
-            android:text="Profile Account"
+            android:text="Edit Profile"
             android:textStyle="bold"
             android:textColor="#A59077"
             android:textSize="30dp" />
@@ -50,31 +52,18 @@
             android:layout_marginBottom="589dp"
             android:src="@drawable/ayomakan" />
 
-        <TextView
-            android:id="@+id/tv_welcome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/viewTitle"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="160dp"
-            android:text="Hai,"
-            android:textColor="#A59077"
-            android:textSize="25sp"
-            android:textStyle="bold" />
-
-
         <Button
-            android:id="@+id/btn_edit"
-            android:layout_width="127dp"
+            android:id="@+id/btn_save"
+            android:layout_width="178dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="25dp"
-            android:layout_marginEnd="259dp"
-            android:layout_marginBottom="288dp"
+            android:layout_marginStart="118dp"
+            android:layout_marginEnd="118dp"
+            android:layout_marginBottom="254dp"
             android:backgroundTint="#C7B7A3"
-            android:text="Edit Profile"
+            android:text="Save"
             android:textColor="@color/white"/>
 
         <LinearLayout
@@ -84,8 +73,8 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="24dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginBottom="347dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="313dp"
             android:background="#FFFAE6"
             android:orientation="vertical"
             android:paddingBottom="10dp">
@@ -107,15 +96,15 @@
                     android:textColor="#A59077"
                     android:textSize="18sp" />
 
-                <TextView
-                    android:id="@+id/tv_name"
+                <EditText
+                    android:id="@+id/et_username"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:text="-"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:hint="enter username here"
+                    android:textAlignment="viewEnd"
                     android:textColor="#6F4E37"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textSize="15sp" />
 
             </LinearLayout>
 
@@ -143,15 +132,15 @@
                     android:textColor="#A59077"
                     android:textSize="18sp" />
 
-                <TextView
-                    android:id="@+id/tv_number"
+                <EditText
+                    android:id="@+id/et_number"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:text="-"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:hint="enter phone number here"
+                    android:textAlignment="viewEnd"
                     android:textColor="#6F4E37"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <View
@@ -171,62 +160,37 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="219dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Address :"
                     android:textColor="#A59077"
                     android:textSize="18sp" />
 
-                <TextView
-                    android:id="@+id/tv_addres"
+                <EditText
+                    android:id="@+id/et_address"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:text="-"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:hint="enter address here"
+                    android:textAlignment="viewEnd"
                     android:textColor="#6F4E37"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textSize="15sp" />
             </LinearLayout>
-
-            <View
-                android:id="@+id/view3"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="6dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="6dp"
-                android:background="#D9D9D9" />
-
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/iv_delete"
-            android:layout_width="149dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="353dp"
-            android:layout_marginTop="251dp"
-            android:layout_marginEnd="29dp"
-            android:layout_marginBottom="560dp"
-            android:src="@drawable/baseline_delete_24" />
-
-        <ImageView
-            android:id="@+id/btn_logout"
+            android:id="@+id/iv_back"
             android:layout_width="29dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="365dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="17dp"
-            android:layout_marginBottom="787dp"
-            android:src="@drawable/baseline_logout_24" />
+            android:layout_marginStart="17dp"
+            android:layout_marginTop="27dp"
+            android:layout_marginEnd="365dp"
+            android:layout_marginBottom="784dp"
+            android:src="@drawable/baseline_arrow_back_24" />
     </RelativeLayout>
 </FrameLayout>
