feat: profile xml

--- a/AyoMakan/app/src/main/res/layout/activity_edit_profile.xml
+++ b/AyoMakan/app/src/main/res/layout/activity_edit_profile.xml
@@ -11,6 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="35dp"
+            android:src="@drawable/baseline_arrow_back_24" />
+
         <TextView
             android:id="@+id/tv_profile"
             android:layout_width="wrap_content"
@@ -20,12 +29,12 @@
             android:text="Edit Profile"
             android:textStyle="bold"
             android:textColor="#A59077"
-            android:textSize="30dp" />
+            android:textSize="30sp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:layout_below="@+id/tv_profile"
+            android:layout_below="@id/tv_profile"
             android:layout_marginTop="17dp"
             android:background="#A59077" />
 
@@ -33,164 +42,134 @@
             android:id="@+id/viewTitle"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:layout_below="@+id/tv_profile"
+            android:layout_below="@id/tv_profile"
             android:layout_marginTop="24dp"
             android:background="#A59077" />
-
 
         <ImageView
             android:id="@+id/img_logo"
             android:layout_width="170dp"
             android:layout_height="170dp"
-            android:layout_below="@+id/viewTitle"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="130dp"
-            android:layout_marginTop="-2dp"
-            android:layout_marginEnd="130dp"
-            android:layout_marginBottom="589dp"
+            android:layout_below="@id/viewTitle"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
             android:src="@drawable/ayomakan" />
-
-        <Button
-            android:id="@+id/btn_save"
-            android:layout_width="178dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="118dp"
-            android:layout_marginEnd="118dp"
-            android:layout_marginBottom="254dp"
-            android:backgroundTint="#C7B7A3"
-            android:text="Save"
-            android:textColor="@color/white"/>
 
         <LinearLayout
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@id/img_logo"
             android:layout_marginStart="24dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="313dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginTop="20dp"
             android:background="#FFFAE6"
             android:orientation="vertical"
-            android:paddingBottom="10dp">
+            android:padding="10dp">
+
+<!--            <EditText-->
+<!--                android:id="@+id/et_username"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="50dp"-->
+<!--                android:layout_marginVertical="10dp"-->
+<!--                android:background="@drawable/custome_et2"-->
+<!--                android:drawableLeft="@drawable/baseline_person_24"-->
+<!--                android:drawablePadding="8dp"-->
+<!--                android:hint="Username"-->
+<!--                android:padding="8dp"-->
+<!--                android:textColor="#D8AE7E" />-->
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="10dp">
 
                 <TextView
-                    android:layout_width="50dp"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Username :"
+                    android:text="Username "
                     android:textColor="#A59077"
                     android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/et_username"
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
-                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
                     android:hint="enter username here"
-                    android:textAlignment="viewEnd"
                     android:textColor="#6F4E37"
                     android:textSize="15sp" />
-
             </LinearLayout>
 
             <View
-                android:id="@+id/view"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="6dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="6dp"
+                android:layout_marginVertical="6dp"
                 android:background="#D9D9D9" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="10dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Phone Number :"
+                    android:text="Phone Number "
                     android:textColor="#A59077"
                     android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/et_number"
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
-                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
                     android:hint="enter phone number here"
-                    android:textAlignment="viewEnd"
                     android:textColor="#6F4E37"
                     android:textSize="15sp" />
             </LinearLayout>
 
             <View
-                android:id="@+id/view2"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="6dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="6dp"
+                android:layout_marginVertical="6dp"
                 android:background="#D9D9D9" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="10dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Address :"
+                    android:text="Address "
                     android:textColor="#A59077"
                     android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/et_address"
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
-                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
                     android:hint="enter address here"
-                    android:textAlignment="viewEnd"
                     android:textColor="#6F4E37"
                     android:textSize="15sp" />
             </LinearLayout>
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/iv_back"
-            android:layout_width="29dp"
+        <Button
+            android:id="@+id/btn_save"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="17dp"
-            android:layout_marginTop="27dp"
-            android:layout_marginEnd="365dp"
-            android:layout_marginBottom="784dp"
-            android:src="@drawable/baseline_arrow_back_24" />
+            android:layout_below="@id/linearLayout2"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:backgroundTint="#C7B7A3"
+            android:text="Save"
+            android:textColor="@color/white"/>
     </RelativeLayout>
 </FrameLayout>
