--- a/AyoMakan/app/src/main/res/layout/activity_detail.xml
+++ b/AyoMakan/app/src/main/res/layout/activity_detail.xml
@@ -7,8 +7,8 @@
     android:id="@+id/relative">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         app:cardCornerRadius="20dp"
         android:layout_alignParentLeft="true"
         android:layout_margin="12dp">
@@ -46,7 +46,6 @@
             android:id="@+id/ll_detail_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="20dp"
             android:background="@color/white"
             android:orientation="vertical">
 
@@ -73,6 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:layout_marginLeft="15dp"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -102,7 +102,8 @@
                 android:id="@+id/rate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="15dp">
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
@@ -122,7 +123,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="15dp">
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="15dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -140,30 +142,32 @@
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
+            android:layout_width="360dp"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
             app:cardElevation="8dp"
             android:backgroundTint="#EEEEEE"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="8dp"
+            android:layout_gravity="center_horizontal">
 
-        <TextView
-            android:id="@+id/tv_descResto"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:text="Description"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            android:visibility="gone"/>
+            <TextView
+                android:id="@+id/tv_descResto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="Description"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:visibility="gone"/>
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="360dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp">
 
             <Button
@@ -203,7 +207,8 @@
             android:id="@+id/addReview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center_horizontal">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_addReview"
@@ -228,7 +233,8 @@
             android:id="@+id/review"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginLeft="15dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -248,8 +254,9 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_reviews"
-                android:layout_width="match_parent"
+                android:layout_width="370dp"
                 android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
                 android:visibility="gone"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
