--- a/AyoMakan/app/src/main/res/layout/fragment_search.xml
+++ b/AyoMakan/app/src/main/res/layout/fragment_search.xml
@@ -6,11 +6,43 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.SearchFragment">
 
+    <LinearLayout
+        android:id="@+id/linearlayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/ayomakan"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:text="Search"
+            android:textColor="#A59077"
+            android:textSize="28sp"
+            android:textStyle="bold"/>
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#A59077"
+        android:layout_marginTop="100dp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#A59077"
+        android:layout_marginTop="105dp"/>
+
     <androidx.appcompat.widget.SearchView
         android:id="@+id/search"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="120dp"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/custome_et2"
         app:queryHint="Search for restaurants"
@@ -37,9 +69,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="665dp"
+        android:layout_height="590dp"
         android:orientation="vertical"
-        android:layout_marginTop="100dp">
+        android:layout_marginTop="180dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_resto"
