--- a/AyoMakan/app/src/main/res/layout/fragment_home.xml
+++ b/AyoMakan/app/src/main/res/layout/fragment_home.xml
@@ -47,6 +47,7 @@
                         android:textSize="14sp"/>
 
                     <TextView
+                        android:id="@+id/textView2"
                         android:layout_width="250dp"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/textView1"
